Added Alterra Aspen to portfolio

--- a/src/global.pcss
+++ b/src/global.pcss
@@ -4,12 +4,12 @@
 
 /*Global Fonts*/
 .fancy-font {
-  font-family: "Annie Use Your Telescope", cursive;
+  font-family: 'Annie Use Your Telescope', cursive;
   @apply text-brand-brown text-2xl;
 }
 
 .fancy-font-inverted {
-  font-family: "Annie Use Your Telescope", cursive;
+  font-family: 'Annie Use Your Telescope', cursive;
   @apply text-center mb-6 text-5xl text-brand-off-white;
 }
 
@@ -22,12 +22,12 @@
   text-transform: uppercase;
 }
 .tagline {
-  font-family: "Annie Use Your Telescope", cursive;
+  font-family: 'Annie Use Your Telescope', cursive;
   @apply text-brand-dust-rose text-2xl;
 }
 
 .tagline-inverted {
-  font-family: "Annie Use Your Telescope", cursive;
+  font-family: 'Annie Use Your Telescope', cursive;
   @apply text-brand-off-white text-2xl;
 }
 
@@ -41,11 +41,11 @@
   @apply text-brand-off-white text-2xl mb-5;
 }
 .imageText-button {
-  font-family: "Annie Use Your Telescope", cursive;
+  font-family: 'Annie Use Your Telescope', cursive;
   @apply text-brand-dust-rose text-2xl block mt-12 underline;
 }
 .imageText-button-inverted {
-  font-family: "Annie Use Your Telescope", cursive;
+  font-family: 'Annie Use Your Telescope', cursive;
   @apply text-brand-off-white text-2xl block mt-12 underline;
 }
 .p-inverted {
