- added volunteer app case study - fixed text alignment - added new volunteer app assets - updated CV

--- a/src/global.pcss
+++ b/src/global.pcss
@@ -10,7 +10,7 @@
 
 .fancy-font-inverted {
   font-family: 'Annie Use Your Telescope', cursive;
-  @apply text-center mb-6 text-5xl text-brand-off-white;
+  @apply mb-6 text-5xl text-brand-off-white;
 }
 
 .h4-uppercase {
@@ -87,7 +87,7 @@ a {
   @apply px-4 my-32 md:px-11 lg:px-52 py-16 bg-brand-gold;
 }
 .card {
-  @apply h-full text-center p-6 2xl:p-16 bg-brand-off-white;
+  @apply h-full p-6 2xl:p-16 bg-brand-off-white;
   box-shadow: 0 2px 22px 0 rgba(172, 122, 127, 0.61);
 }
 .grid-icon {
@@ -103,7 +103,7 @@ a {
   box-shadow: 0 2px 22px 0 #9b98ae;
 }
 .text-grid {
-  @apply h-full p-6 text-center 2xl:p-16;
+  @apply h-full p-6 text-left 2xl:p-16;
 }
 .background-rectangle {
   @apply w-full lg:h-64 h-48 absolute;
