--- a/src/global.pcss
+++ b/src/global.pcss
@@ -64,7 +64,7 @@
 }
 
 .image-left-mobile {
-  @apply md:float-right w-1/2 p-8 my-0 md:my-12 ml-0 md:p-0  md:ml-8 lg:ml-14 2xl:ml-24;
+  @apply w-full xl:w-1/2 p-8 mx-auto;
   box-shadow: 0 2px 22px 0 #9b98ae;
 }
 
