- updated gastro & du case study - added new assets for gastro & du

--- a/src/global.pcss
+++ b/src/global.pcss
@@ -67,6 +67,10 @@
   @apply w-full xl:w-1/2 p-8 mx-auto;
   box-shadow: 0 2px 22px 0 #9b98ae;
 }
+.image-no-bg {
+  box-shadow: 0 2px 22px 0 #d1d1d1;
+  @apply w-full mx-auto;
+}
 
 body {
   margin: 0;
