changed font family

--- a/src/global.pcss
+++ b/src/global.pcss
@@ -23,33 +23,33 @@
 }
 .tagline {
   font-family: 'Annie Use Your Telescope', cursive;
-  @apply text-brand-brand-green text-2xl tracking-wide;
+  @apply text-brand-green-hover text-4xl tracking-wide mb-3;
 }
 
 .tagline-inverted {
   font-family: 'Annie Use Your Telescope', cursive;
-  @apply text-brand-off-white text-2xl tracking-wide;
+  @apply text-brand-off-white text-4xl tracking-wide mb-3;
 }
 
 .section-heading {
   @apply text-brand-brand-green text-4xl;
 }
 .imageText-heading {
-  @apply text-brand-brand-green text-2xl mb-5;
+  @apply text-brand-brand-green text-3xl mb-5;
 }
 .imageText-heading-inverted {
-  @apply text-brand-off-white text-2xl mb-5;
+  @apply text-brand-off-white text-3xl mb-5;
 }
 .imageText-button {
   font-family: 'Annie Use Your Telescope', cursive;
-  @apply text-brand-brand-green text-2xl block mt-12 underline tracking-wide;
+  @apply text-brand-brand-green text-3xl block mt-12 no-underline tracking-wide;
 }
 .imageText-button-inverted {
   font-family: 'Annie Use Your Telescope', cursive;
-  @apply text-brand-off-white text-2xl block mt-12 underline tracking-wide;
+  @apply text-brand-off-white text-3xl block mt-12 no-underline tracking-wide;
 }
 .p-inverted {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Roboto', sans-serif;
   @apply text-brand-off-white;
 }
 
@@ -74,14 +74,14 @@
 
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 18px;
   line-height: 1.5;
   color: #757171;
   padding-top: 102px;
 }
 .list-inverted {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Roboto', sans-serif;
   @apply text-brand-off-white mt-2;
   list-style: square;
 }
