changed front style - change decoration font style - updated fonts to fit new style - updated logo

--- a/src/global.pcss
+++ b/src/global.pcss
@@ -4,13 +4,13 @@
 
 /*Global Fonts*/
 .fancy-font {
-  font-family: 'Annie Use Your Telescope', cursive;
-  @apply text-brand-brand-green text-2xl tracking-wide;
+  font-family: 'Shadows Into Light Two', cursive;
+  @apply text-brand-brand-green text-2xl tracking-wider;
 }
 
 .fancy-font-inverted {
-  font-family: 'Annie Use Your Telescope', cursive;
-  @apply mb-6 text-5xl text-brand-off-white tracking-wide;
+  font-family: 'Shadows Into Light Two', cursive;
+  @apply mb-6 text-5xl text-brand-off-white tracking-wider;
 }
 
 .h4-uppercase {
@@ -22,13 +22,13 @@
   text-transform: uppercase;
 }
 .tagline {
-  font-family: 'Annie Use Your Telescope', cursive;
-  @apply text-brand-green-hover text-4xl tracking-wide mb-3;
+  font-family: 'Shadows Into Light Two', cursive;
+  @apply text-brand-green-hover text-3xl tracking-wider mb-3;
 }
 
 .tagline-inverted {
-  font-family: 'Annie Use Your Telescope', cursive;
-  @apply text-brand-off-white text-4xl tracking-wide mb-3;
+  font-family: 'Shadows Into Light Two', cursive;
+  @apply text-brand-off-white text-3xl tracking-wider mb-3;
 }
 
 .section-heading {
@@ -41,12 +41,12 @@
   @apply text-brand-off-white text-3xl mb-5;
 }
 .imageText-button {
-  font-family: 'Annie Use Your Telescope', cursive;
-  @apply text-brand-brand-green text-3xl block mt-12 no-underline tracking-wide;
+  font-family: 'Shadows Into Light Two', cursive;
+  @apply text-brand-brand-green text-2xl block mt-12 no-underline tracking-wider;
 }
 .imageText-button-inverted {
-  font-family: 'Annie Use Your Telescope', cursive;
-  @apply text-brand-off-white text-3xl block mt-12 no-underline tracking-wide;
+  font-family: 'Shadows Into Light Two', cursive;
+  @apply text-brand-off-white text-2xl block mt-12 no-underline tracking-wider;
 }
 .p-inverted {
   font-family: 'Roboto', sans-serif;
@@ -128,7 +128,7 @@ a {
   will-change: transform, transition;
 }
 .btn {
-  font-family: 'Annie Use Your Telescope', cursive;
+  font-family: 'Shadows Into Light Two', cursive;
   @apply text-2xl bg-brand-brand-green text-brand-off-white p-4 rounded-md tracking-wider;
 }
 .btn:hover {
